Today I've completely rewritten and improved the logic for the adaptive menu with the ‘More’ button: the menu now automatically, smoothly and beautifully moves any buttons to “More” when the screen width is reduced (starting from 1200px), the ‘More’ dropdown doesn't go out of the container boundaries, and all menu elements always line up neatly without overlapping each other and bugs with disappearing/overlapping buttons.

--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -47,3 +47,7 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
 }
+img {
+    max-width: 100%;
+    height: auto;
+}
